[gd_scene load_steps=7 format=3 uid="uid://b1mehyij5hphl"]

[ext_resource type="Script" path="res://core/equipment_slot.gd" id="1_et138"]
[ext_resource type="Texture2D" uid="uid://0fyum3d8f5t0" path="res://assets/equipment/test/helmet.png" id="2_sg48l"]
[ext_resource type="Texture2D" uid="uid://bsexq1uw6ybg8" path="res://assets/frame/rare.png" id="3_x1s0f"]
[ext_resource type="Texture2D" uid="uid://cipnl2afdiysj" path="res://assets/general/cooldown.png" id="4_kqiie"]
[ext_resource type="Texture2D" uid="uid://cj3u0sayuvplr" path="res://assets/general/pause.png" id="5_1kahi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rcxp6"]
size = Vector2(36, 36)

[node name="EquipmentSlot" type="Container"]
custom_minimum_size = Vector2(48, 48)
offset_right = 48.0
offset_bottom = 48.0
script = ExtResource("1_et138")

[node name="EquipmentArt" type="Sprite2D" parent="."]
position = Vector2(24, 24)
scale = Vector2(3, 3)
texture = ExtResource("2_sg48l")

[node name="EquipmentFrame" type="Sprite2D" parent="."]
position = Vector2(24, 24)
scale = Vector2(3, 3)
texture = ExtResource("3_x1s0f")

[node name="Cooldown" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.501961)
position = Vector2(42, 42)
rotation = 3.14159
scale = Vector2(3, 3)
texture = ExtResource("4_kqiie")
centered = false

[node name="Pause" type="Sprite2D" parent="."]
position = Vector2(24, 25)
scale = Vector2(2, 2)
texture = ExtResource("5_1kahi")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(24, 24)
shape = SubResource("RectangleShape2D_rcxp6")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
